# PumpkinSpice

./: .gitignore  .pre-commit-config.yaml  ADVERSARIAL_CODE_REVIEW.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pumpkinspice-Spec.md  pumpkinspice-report-2026-06-28.md  pumpkinspice-web-PRD.md  pyproject.toml
.github/workflows/: ci.yml
configs/: arango_real.toml  copper_dagger.toml  copper_dagger_plan.toml  copper_dagger_replan.toml  floor_planning_chicken_level2.toml  floor_planning_control_gather.toml  floor_planning_copper_dagger.toml  floor_planning_weaponcrafting5.toml  floor_planning_yellow_slime.toml  herobench_real.toml  live_decoder_smoke.toml  lmstudio_pgvector.toml  mathbench_qwen25_05b.toml  mathbench_qwen36_27b.toml  mathbench_qwen3_8b.toml  offline.toml  parity.toml  pgvector_relational.toml  real_retrieval.toml  transport.toml  v2_smoke_chicken_qwen3_8b.toml
docs/: floor-test-v2-design.md  geometric-signatures-replication.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  theme.css
frontend/src/components/: Captures.tsx  HanoiBoard.tsx  HanoiSetup.tsx  Model.tsx  Playground.tsx  Reports.tsx  Runs.tsx  Settings.tsx  Setup.tsx  TurnView.tsx  World.tsx
scripts/: bootstrap_arango.py  bootstrap_pg.py  seed_corpus.py  seed_corpus_arango.py  seed_math500.py  seed_recipe_book.py  seed_relational_pg.py
src/pumpkinspice/: __init__.py  analyze.py  cli.py  config.py  contracts.py  corpus.py  embeddings.py  episode.py  kernel.py  logging.py  loop.py  model_probe.py  parity.py  relational.py  reporting.py  transport.py
src/pumpkinspice/introspect/: __init__.py  bench_herobench.py  bench_math.py  evaluate.py  geometry.py  pipeline.py  replay.py
src/pumpkinspice/plugins/: __init__.py  capture_jsonl.py  decoder_echo.py  decoder_lmstudio.py  decoder_openai_compat.py  decoder_vllm.py  prompt_default.py  prompt_executor.py  prompt_plan.py  prompt_react.py  prompt_replan.py  retrieval_arango.py  retrieval_null.py  retrieval_pgvector.py  world_hanoi.py  world_herobench.py  world_mock.py
src/pumpkinspice/web/: __init__.py  app.py  mcp_host.py  mcp_servers.py  runs.py  settings.py
tests/: test_analyze.py  test_arango.py  test_bench_herobench.py  test_bench_math.py  test_config_cli.py  test_corpus.py  test_embeddings.py  test_evaluate.py  test_geometry.py  test_goal_skill.py  test_http_plugins.py  test_kernel_plugins.py  test_loop_guard.py  test_loop_provenance.py  test_mcp_host.py  test_mcp_servers.py  test_parity.py  test_pgvector.py  test_pipeline.py  test_prompt.py  test_prompt_executor.py  test_prompt_plan.py  test_prompt_react.py  test_prompt_replan.py  test_relational.py  test_replay.py  test_reporting.py  test_runs_threading.py  test_settings.py  test_transport.py  test_web.py  test_world_hanoi.py
